# page-loader

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: testcov-lint.yml  tests_and_linter_status.yml
page_loader/: __init__.py  core.py  page_loader.py  services.py  test.py
tests/: test_page_loader.py  test_services.py
tests/fixtures/: courses.html  jscode.html
