[tool.poetry]
name = "hexlet-code"
version = "0.3.0"
description = ""
authors = ["Alexander Sidorov <pl4zie@gmail.com>"]
packages = [
{ include = "page_loader" }
]

[tool.poetry.scripts]
page-loader = "page_loader.page_loader:main"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
bs4 = "^0.0.1"
progress = "^1.6"

[tool.poetry.dev-dependencies]
requests-mock = "^1.9.3"
flake8 = "^4.0.1"
pytest = "^7.0.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"